--- a/Resources/translations/admin.en.yml
+++ b/Resources/translations/admin.en.yml
@@ -17,3 +17,4 @@ source_prefix: "Source prefix"
 decimal_precision: "Decimal precision"
 clear_cell: "Clear"
 clear_all_cells: "Clear all"
+disable_up_down: "Disable up/down arrow"
