[TASK] Filtering and batch edit field configuration
Added field configuration to enable filtering and batch edit.

--- a/Resources/translations/admin.en.yml
+++ b/Resources/translations/admin.en.yml
@@ -8,6 +8,8 @@ bridge_field: "Bridge field"
 source_hidden_fields: "Source hidden fields"
 bridge_hidden_fields: "Bridge hidden fields"
 auto_resize: "Auto resize columns"
+enable_filtering: "Enable filtering"
+enable_batch_edit: "Enable batch edit"
 new_line_split: "New line split"
 max_width_resize: "Max width resize"
 allow_create: "Allow create"
